--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas" rel="stylesheet">
-
-<body>
-	<div class="wrap">
-		<center class="heading">Santa needs your help! Get the Gifts to the Tree without touching any sides!</center>
-		<br/>
-		<center id="alerts">~*~ Merry Christmas ~*~</center>
-		<p>
-			<span style="float: left">Player Lives: <span id="playerlives">5</span></span>
-			<span style="float: right">Gifts Saved: <span id="giftssaved">0 / 5</span></span>
-		</p>
-		<canvas id="canvas"></canvas>
-	</div>
-</body>
+<div class="container">
+    <div class="en-wrapper">
+    <div class="envelope">
+    <div class="letter">
+    <div class="text">
+        <strong>Amor!!</strong>
+        <p>
+        
+esse docinho adoçou meu dia, mas não mais do que você adoça minha vida.
+Obrigado por ser incrível, paciente e ainda me mimar assim 😌
+Te amo demais, minha pessoa favorita! 💙
+        </p>
+    </div>
+    </div>
+    </div>
+    <div class="heart"></div>
+    </div>
+    </div>
